# geomapper

./: .env  Cargo.toml  README.md
src/: args.rs  bundesland.rs  einwohner.rs  generalpattern.rs  landkries.rs  lat.rs  lon.rs  main.rs  note.rs  ord.rs  osm.rs  plz.rs  qkm.rs
