[package]
name = "geomapper"
version = "0.4.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "geomapper for German geographical localization"
homepage = "https://github.com/rustcodepro/geomapper"
repository = "https://github.com/rustcodepro/geomapper"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
figlet-rs = "0.1.5"
rayon = "1.11.0"
tabled = "0.18.0"
tokio = { version = "1.47.1", features = ["full"] }
